base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: application-deployment-label
  name: application-deployment
  namespace: nathan-ns

spec:
  replicas: 2
  selector:
    matchLabels:
      app: placeholder

  template:
    metadata:
      labels:
        app: placeholder
    spec:
      volumes:
      - name: application-configmap
        configMap:
          name: application-configmap
      containers:
      - name: application-image
        image: nathan-ns/dev-application-imagestream:dev
        imagePullPolicy: IfNotPresent
        
        volumeMounts:
        - name: application-configmap
          mountPath: /usr/src/app/config
          readOnly: true
      serviceAccountName: super-user
