base/nginx.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx

spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
    
  nodeSelector:
    disktype: ssd
