base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: application-service

spec:
  selector:
    app: placehfolder
    
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
