base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route

metadata:
  labels:
    app: deployment-route-label
  name: deployment-route
  namespace: nathan-ns

spec:
  host: deployment-nathan-ns.apps-crc.testing
  port:
    targetPort: 8080
  to:
    kind: Service
    name: node
